[project]
name = "mq-forwarder"
version = "0.1.0"
description = "forward mqtt to long-term storages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiomqtt>=2.5.1",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
]

[dependency-groups]
sandbox = [
    "jupyter>=1.1.1",
]
